# The-A-Files

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
Dataset/LibriSpeech/142345/: 2094-142345-0001.flac  2094-142345-0003.flac  2094-142345-0005.flac  2094-142345-0007.flac  2094-142345-0009.flac  2094-142345-0010.flac
Dataset/VCTK/: VCTK.txt
Dataset/VCTK/16/: 1.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac
Documentation/: diagram.drawio  functions.drawio
LICENSES/: SRMRpy-LICENSE.md
TAF/: main.py
TAF/attacks/: attacks.py
TAF/generator/: generator.py  sound.py
TAF/loaders/: WavFileLoader.py
TAF/metrics/: factory.py
TAF/metrics/ai_based/mosnet/: MosNetMetric.py
TAF/metrics/common/: metrics_helper.py
TAF/metrics/speech_intelligibility/: CsiiMetric.py  NcmMetric.py  StgiMetric.py  StoiMetric.py  WstmiMetric.py
TAF/metrics/speech_quality/: BSSEvalMetric.py  CepstrumDistanceMetric.py  FWSnrSegMetric.py  LlrMetric.py  MelCepstralDistanceMetric.py  PesqMetric.py  SisdrMetric.py  SnrMetric.py  SnrSegMetric.py  WssMetric.py
TAF/metrics/speech_quality/composite/: CbakMetric.py  CompositeSpeechEnhancementMetric.py  CovlMetric.py  CsigMetric.py
TAF/metrics/speech_reverberation/: BsdMetric.py  SrmrMetric.py
TAF/models/: Metric.py  Metrics.py  types.py
TAF/steganography/: DctDeltaLsbMethod.py  DsssMethod.py  DwtLsbMethod.py  EchoMethod.py  NormSpaceMethod.py
TAF/steganography/factory/: factory.py
TAF/steganography_methods/: BlindSvdMethod.py  DctB1Method.py  DctDeltaLsbMethod.py  DsssMethod.py  DwtLsbMethod.py  EchoMethod.py  ForegroundBackgroundSegmentationMethod.py  FsvcMethod.py  ImprovedPhaseCodingMethod.py  LsbMethod.py  LwtMethod.py  NormSpaceMethod.py  PatchworkMultilayerMethod.py  PhaseCodingMethod.py  PrimeFactorInterpolatedMethod.py  factory.py
TAF/steganography_methods/common/: background_separator.py
TAF/steganography_methods/factory/: factory.py
TAF/stganography/: DctB1Method.py  DctDeltaLsbMethod.py  DsssMethod.py  EchoMethod.py  FsvcMethod.py  LsbMethod.py  NormSpaceMethod.py  PhaseCodingMethod.py
TAF/stganography/common/: mixer.py  split.py
TAF/stganography/factory/: factory.py
docs/: osp-template.docx  publishing.md
examples/: config.yaml
src/taf/: __init__.py  main.py
src/taf/api/: __init__.py  app.py  jobs.py  main.py  schemas.py  uploads.py
src/taf/api/routers/: catalog.py  datasets.py  experiments.py
src/taf/attacks/: __init__.py  attacks.py
src/taf/audio/: formats.py  io.py
src/taf/configs/: __init__.py  config-direct-no-metrics.yaml  config-full.yaml  config-metrics-only.yaml  config-stego-only.yaml
src/taf/evaluation/: __init__.py  config.py  messages.py  result.py  workflow.py  yaml_loader.py
src/taf/experiments/: __init__.py  csv_export.py  registry.py  results.py  runner.py  schema.py
src/taf/experiments/scenarios/: __init__.py  attack_robustness.py  base.py  dataset_benchmark.py  embedding_capacity.py  method_comparison.py  perceptual_quality.py  research_experiment.py
src/taf/loaders/: WavFileLoader.py
src/taf/methods/: AacStcMethod.py  BlindSvdMethod.py  DctB1Method.py  DctDeltaLsbMethod.py  DsssMethod.py  DwtLsbMethod.py  EchoMethod.py  FgasMethod.py  ForegroundBackgroundSegmentationMethod.py  FsvcMethod.py  ImprovedPhaseCodingMethod.py  LsbMethod.py  LwtMethod.py  NormSpaceMethod.py  PatchworkMultilayerMethod.py  PhaseCodingMethod.py  PrimeFactorInterpolatedMethod.py  WirelessDwtLsbMethod.py  __init__.py  factory.py
src/taf/metrics/: factory.py
src/taf/metrics/ai_based/mosnet/: MosNetMetric.py
src/taf/metrics/speech_intelligibility/: CsiiMetric.py  NcmMetric.py  StgiMetric.py  StoiMetric.py  WstmiMetric.py
src/taf/metrics/speech_quality/: BSSEvalMetric.py  CepstrumDistanceMetric.py  FWSnrSegMetric.py  LlrMetric.py  MelCepstralDistanceMetric.py  PesqMetric.py  SisdrMetric.py  SnrMetric.py  SnrSegMetric.py  WssMetric.py
src/taf/metrics/speech_reverberation/: BsdMetric.py  SrmrMetric.py
src/taf/models/: SteganographyMethod.py  WavFile.py  types.py
src/taf/resources/: paths.py
src/taf/resources/audio/: __init__.py
src/taf/resources/datasets/: __init__.py
src/taf/resources/models/: __init__.py
src/taf/ui/: __init__.py  helpers.py  streamlit_app.py
tests/: conftest.py  test_aac_stc_method.py  test_api.py  test_config_yaml.py  test_experiments.py  test_fgas_method.py  test_format_roundtrip.py  test_methods_roundtrip.py  test_package_import.py  test_resources.py  test_srmrpy_vendor.py  test_streamlit_ui_helpers.py  test_wireless_dwt_lsb_method.py
web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/experiments/: page.tsx
web/app/experiments/[id]/: page.tsx
web/app/experiments/attack-robustness/: page.tsx
web/app/experiments/dataset-benchmark/: page.tsx
web/app/experiments/embedding-capacity/: page.tsx
web/app/experiments/method-comparison/: page.tsx
web/app/experiments/perceptual-quality/: page.tsx
web/app/experiments/research-experiment/: page.tsx
web/app/results/exports/: page.tsx
web/app/results/history/: page.tsx
web/app/settings/attacks/: page.tsx
web/app/settings/datasets/: page.tsx
web/app/settings/methods/: page.tsx
web/app/settings/metrics/: page.tsx
web/components/: charts.tsx  theme-toggle.tsx
web/components/experiments/: AdvancedSettings.tsx  AttackSelector.tsx  CsvExportButton.tsx  DatasetSelector.tsx  ExperimentLayout.tsx  ExperimentPreview.tsx  ExperimentResultsTable.tsx  ExperimentSummaryCards.tsx  MethodSelector.tsx  MetricSelector.tsx  PayloadLengthSelector.tsx  ScenarioOptions.tsx  SummaryTables.tsx  useCatalog.ts
web/components/layout/: AppSidebar.tsx  PageHeader.tsx
web/components/ui/: accordion.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  progress.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx
(+18 files in other folders)
