[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-a-files"
version = "0.1.0"
description = "Audio steganography methods, attacks, and speech-quality evaluation metrics."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "LICENSES/*"]
authors = [
    { name = "Pawel Kaczmarek" },
    { name = "Zbigniew Piotrowski" },
]
keywords = [
    "audio",
    "steganography",
    "watermarking",
    "speech-quality",
    "speech-intelligibility",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bitstring==4.0.1",
    "Gammatone==1.0.3",
    "librosa==0.9.2",
    "loguru==0.6.0",
    "mel_cepstral_distance==0.0.2",
    "museval==0.4.1",
    "numba==0.56.4",
    "numpy==1.23.5",
    "pesq==0.0.4",
    "pystoi==0.3.3",
    "PyWavelets==1.4.1",
    "PyYAML>=6.0",
    "scipy==1.9.3",
    "soundfile==0.11.0",
    "tensorflow==2.12.1",
    "tensorflow_intel==2.12.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/pawel-kaczmarek/The-A-Files"
Repository = "https://github.com/pawel-kaczmarek/The-A-Files"
Issues = "https://github.com/pawel-kaczmarek/The-A-Files/issues"
Documentation = "https://github.com/pawel-kaczmarek/The-A-Files/blob/main/README.md"
Publishing = "https://github.com/pawel-kaczmarek/The-A-Files/blob/main/docs/publishing.md"

[project.scripts]
taf-eval = "taf.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["taf*"]

[tool.setuptools.package-data]
"taf.resources" = [
    "audio/*.wav",
    "datasets/*/*/*.flac",
]
"taf.resources.models.mosnet" = ["*.h5"]
"taf.configs" = ["*.yaml", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
